/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.app.wearsettings;

option java_outer_classname = "WearSettingsEnums";

// The action performed for a settings event.
// Next ID: 4
enum Action {
  ACTION_UNKNOWN = 0;

  // Indicates that an item was click on.
  ACTION_CLICKED = 1;

  // Indicates a toggle was toggled on
  ACTION_TOGGLED_ON = 2;

  // Indicates a toggle was toggled off
  ACTION_TOGGLED_OFF = 3;
}

// IDs for settings UI elements.
// Next ID: 392
enum ItemId {
  // An unknown settings item. This may be set if no preference key is mapped to an enum value or as
  // a catch-all for values not yet added to this proto file.
  UNKNOWN = 0;

  ACCESSIBILITY_COLOR_INVERSION = 103;
  ACCESSIBILITY_FONT_SIZE = 369;
  ACCESSIBILITY_LARGE_TEXT = 102;
  ACCESSIBILITY_MAGNIFICATION = 104;
  ACCESSIBILITY_SERVICE = 314;
  ACCESSIBILITY_SIDE_BUTTON = 105;
  ACCESSIBILITY_SOUND = 370;
  ACCESSIBILITY_TALKBACK = 390;
  ACCESSIBILITY_TRIPLE_PRESS_GESTURE = 376;
  ACCESSIBILITY_TTS = 106;
  ACCESSIBILITY_TTS_ENGINE = 313;
  ACCESSIBILITY_TTS_ENGINE_DEFAULT = 107;
  ACCESSIBILITY_TTS_ENGINE_LANGUAGE = 108;
  ACCESSIBILITY_TTS_ENGINE_LISTENTOSAMPLE = 109;
  ACCESSIBILITY_TTS_RATES = 110;
  ACCESSIBILITY_VIBRATION = 371;
  ACCOUNTS_ADD_ACCOUNT = 115;
  ACCOUNT_REMOVE_ACCOUNT = 230;
  ACTIVE_DEVICE_ADMINS = 113;
  APPS_APP_NOTIFICATIONS = 342;
  APPS_APP_STORAGE = 367;
  APPS_ASSISTANT = 366;
  APPS_ASSISTANT_ACCESS = 356;
  APPS_BUTTONS = 141;
  APPS_DND_OPTIONS = 178;
  APPS_VIP_CONTACTS = 343;
  APP_DETAILS_ADVANCED = 116;
  APP_DETAILS_ADVANCED_PERMISSIONS_DRAW_OVERLAY = 117;
  APP_DETAILS_ADVANCED_PERMISSIONS_WRITE_SETTINGS = 118;
  APP_DETAILS_CACHE = 142;
  APP_DETAILS_CLEAR_CACHE = 155;
  APP_DETAILS_CLEAR_DATA = 156;
  APP_DETAILS_CLEAR_DATA_MANAGED = 391;
  APP_DETAILS_DATA = 160;
  APP_DETAILS_FORCE_STOP = 195;
  APP_DETAILS_PERMISSIONS = 24;
  APP_DETAILS_STORAGE = 256;
  APP_DETAILS_UNINSTALL = 264;
  ASSISTANT_HOTWORD_DETECTION = 197;
  ASSISTANT_LONG_PRESS_TO_ASSISTANT = 336;
  ASSISTANT_VOICE_ASSISTANT = 309;
  BATTERY_SAVER_AUTO_BATTERY_SAVER_ENABLED = 324;
  BATTERY_SAVER_BATTERY_SAVER = 315;
  BLUETOOTH_ENABLED = 135;
  BLUETOOTH_HFP = 136;
  BLUETOOTH_SCAN = 137;
  BRIGHTNESS_AUTOMATIC_BRIGHTNESS = 357;
  BRIGHTNESS_AUTOMATIC_BRIGHTNESS_SLIDER = 379;
  CELLULAR_ACCESS_POINT_NAMES = 111;
  CELLULAR_ACCOUNTS = 112;
  CELLULAR_ADVANCED_ENHANCED_4G_LTE = 335;
  CELLULAR_ADVANCED_NETWORK_OPERATORS = 218;
  CELLULAR_ADVANCED_PREFERRED_NETWORK = 228;
  CELLULAR_ADVANCED_SETTINGS = 119;
  CELLULAR_CALL_FORWARDING = 144;
  CELLULAR_CALL_FORWARDING_HELP = 196;
  CELLULAR_CALL_FORWARDING_IOS = 145;
  CELLULAR_CALL_FORWARDING_TURN_OFF = 261;
  CELLULAR_CALL_FORWARDING_TURN_ON = 262;
  CELLULAR_CHANGE_SIM_PIN = 319;
  CELLULAR_DATA_CONNECTIVITY = 161;
  CELLULAR_DATA_ROAMING = 162;
  CELLULAR_DATA_USAGE = 163;
  CELLULAR_DATA_USAGE_APP_USAGE = 164;
  CELLULAR_DATA_USAGE_CYCLE_DAY = 165;
  CELLULAR_DATA_USAGE_LIMIT_ENABLE = 166;
  CELLULAR_DATA_USAGE_LIMIT_VALUE = 167;
  CELLULAR_DATA_USAGE_WARNING_LEVEL = 168;
  CELLULAR_DEFAULT_SMS = 175;
  CELLULAR_EMERGENCY_NOTIFICATIONS = 185;
  CELLULAR_ENABLE_WIFI_WHEN_CHARGING = 186;
  CELLULAR_LOCK_SIM_TOGGLE = 290;
  CELLULAR_PHONE_NUMBER = 224;
  CELLULAR_RESUME_DATA = 232;
  CELLULAR_SIM_STATUS = 241;
  CELLULAR_SIM_STATUS_ICCID = 242;
  CELLULAR_SIM_STATUS_IMEI = 243;
  CELLULAR_SIM_STATUS_IMEISV = 244;
  CELLULAR_SIM_STATUS_NETWORK = 245;
  CELLULAR_SIM_STATUS_NETWORK_STATE = 246;
  CELLULAR_SIM_STATUS_NETWORK_TYPE = 247;
  CELLULAR_SIM_STATUS_PHONE_NUMBER = 248;
  CELLULAR_SIM_STATUS_ROAMING_STATE = 249;
  CELLULAR_SIM_STATUS_SERVICE_STATE = 250;
  CELLULAR_SIM_STATUS_SIGNAL_STRENGTH = 251;
  CELLULAR_TOGGLE = 152;
  CELLULAR_TOGGLE_V2 = 153;
  CELLULAR_TWINNING = 263;
  CELLULAR_TWINNING_CALLS = 143;
  CELLULAR_TWINNING_TEXT = 259;
  CELLULAR_UNLOCK_SIM = 265;
  CELLULAR_VOICEMAIL_NUMBER = 269;
  CONNECTIVITY_AIRPLANE_MODE = 120;
  CONNECTIVITY_BLUETOOTH = 133;
  CONNECTIVITY_CELLULAR = 20;
  CONNECTIVITY_NFC = 219;
  CONNECTIVITY_WIFI = 8;
  DATE_TIME_AUTO_DATE_TIME = 129;
  DATE_TIME_AUTO_TIME_ZONE = 130;
  DATE_TIME_HOUR_FORMAT = 198;
  DATE_TIME_MANUAL_DATE = 211;
  DATE_TIME_MANUAL_TIME = 212;
  DATE_TIME_MANUAL_TIMEZONE = 213;
  DEVELOPER_ADB_DEBUGGING = 114;
  DEVELOPER_ANIMATOR_DURATION_SCALE = 286;
  DEVELOPER_BT_SNOOP_LOG = 138;
  DEVELOPER_BUGREPORT = 139;
  DEVELOPER_CELLULAR_BATTERY_SAVER = 151;
  DEVELOPER_CLEAR_ADB_KEYS = 154;
  DEVELOPER_CONNECTIVITY_VIBRATE = 159;
  DEVELOPER_DEBUG_LAYOUT = 170;
  DEVELOPER_DEBUG_OVERDRAW = 172;
  DEVELOPER_DEBUG_OVER_BLUETOOTH = 171;
  DEVELOPER_DEBUG_OVER_WIFI = 173;
  DEVELOPER_DEBUG_TIMING = 174;
  DEVELOPER_DPI_SETTINGS = 183;
  DEVELOPER_FORCE_RTL_LAYOUT = 358;
  DEVELOPER_LOGPERSIST = 311;
  DEVELOPER_LOG_BUFFER_SIZE = 310;
  DEVELOPER_MOCK_LOCATION_APP = 377;
  DEVELOPER_POINTER_LOCATION = 226;
  DEVELOPER_POWER_OPTIMIZATIONS = 227;
  DEVELOPER_SHOW_TOUCHES = 240;
  DEVELOPER_SMART_ILLUMINATE = 252;
  DEVELOPER_STAY_ON_WHILE_PLUGGED_IN = 255;
  DEVELOPER_TRANSITION_ANIMATION_SCALE = 303;
  DEVELOPER_WEAR_DEVELOPER_OPTIONS = 272;
  DEVELOPER_WIFI_LOGGING = 277;
  DEVELOPER_WINDOW_ANIMATION_SCALE = 304;
  DEVICE_INFO_BATTERY_INFO = 132;
  DEVICE_INFO_CONNECTION_STATUS = 158;
  DEVICE_INFO_DEVICE_NAME = 177;
  DEVICE_INFO_IMEI = 199;
  DEVICE_INFO_LEGAL_NOTICES = 203;
  DEVICE_INFO_MODEL = 215;
  DEVICE_INFO_MSN = 217;
  DEVICE_INFO_SERIAL = 238;
  DEVICE_INFO_VERSION = 266;
  DEVICE_VERSION_BUILD = 140;
  DISPLAY_ALWAYS_ON_SCREEN = 126;
  DISPLAY_BRIGHTNESS = 287;
  DISPLAY_FONT_SIZE = 289;
  DISPLAY_MANUAL_BRIGHTNESS_SLIDER = 380;
  // Item for high brightness-mode/sunlight boost
  DISPLAY_PRAISE_THE_SUN = 355;
  DISPLAY_SCREEN_ORIENTATION = 305;
  DISPLAY_SCREEN_TIMEOUT = 339;
  DISPLAY_WRIST_ORIENTATION = 368;
  DND_OPTIONS_ALARMS = 179;
  DND_OPTIONS_CALLS = 180;
  DND_OPTIONS_EVENTS = 181;
  DND_OPTIONS_REMINDERS = 182;
  EMERGENCY_ALERTS_ALERT_REMINDER = 122;
  EMERGENCY_ALERTS_ALERT_SOUND_DURATION = 123;
  EMERGENCY_ALERTS_ALERT_VIBRATE = 124;
  EMERGENCY_ALERTS_AMBER_ALERTS = 127;
  EMERGENCY_ALERTS_CMAS_TEST_ALERTS = 157;
  EMERGENCY_ALERTS_ETWS_TEST_ALERTS = 187;
  EMERGENCY_ALERTS_EXTREME_THREATS = 192;
  EMERGENCY_ALERTS_SEVERE_THREATS = 239;
  ESIM_ERASE_ESIM = 354;
  ESIM_PHONE_NUMBER = 352;
  ESIM_PROFILE = 345;
  ESIM_PROFILE_DELETE = 351;
  ESIM_PROFILE_DISABLE = 350;
  ESIM_PROFILE_ENABLE = 349;
  ESIM_SIM_STATUS_EID = 353;
  ESIM_STATUS = 348;
  ESIM_TEST_ACTIVATION_STATE = 360;
  ESIM_TEST_PROFILES = 363;
  ESIM_TEST_TEXT_TWINNING_STATE = 361;
  ESIM_TEST_UTIL = 359;
  ESIM_TEST_VOICE_TWINNING_STATE = 362;
  FACTORY_RESET = 193;
  GESTURES_TILT_TO_BRIGHT = 344;
  GESTURES_TILT_TO_WAKE = 260;
  GESTURES_TOUCH_TO_WAKE = 320;
  GO_TO_WATCH_FACE = 381;
  HEALTH_GENDER = 384;
  HEALTH_HEIGHT = 386;
  HEALTH_WEIGHT = 385;
  INPUT_ADD_VIRTUAL_KEYBOARD_SCREEN = 317;
  INPUT_SMART_REPLY = 253;
  LOCATION_LOCATION_FROM_PHONE_TOGGLE = 337;
  LOCATION_LOCATION_FROM_WATCH_TOGGLE = 338;
  LOCATION_LOCATION_TOGGLE = 210;
  LOCATION_PERMISSION_APPS = 372;
  MAIN_ACCESSIBILITY = 291;
  MAIN_ACCOUNTS_AND_SECURITY = 347;
  MAIN_APPS = 292;
  MAIN_ASSISTANT = 378;
  MAIN_BATTERY_SAVER = 387;
  MAIN_BATTERY_SAVER_SUGGESTED_SETTINGS = 316;
  MAIN_CONNECTIVITY = 294;
  MAIN_DEVELOPER_OPTIONS = 288;
  MAIN_DISPLAY = 295;
  MAIN_GENERAL = 340;
  MAIN_GESTURES = 296;
  MAIN_GOOGLE = 382;
  MAIN_HEALTH = 383;
  MAIN_LOCATION = 346;
  MAIN_SAFETY = 388;
  MAIN_SOUND_NOTIFICATION = 254;
  MAIN_SYSTEM = 298;
  MAIN_VIBRATION = 364;
  NFC_TAP_AND_PAY = 258;
  POWER_OFF = 299;
  PREPAIR_ACCESSIBILITY = 300;
  PREPAIR_EMERGENCY_DIALER = 184;
  REGULATORY_INFO = 229;
  RESTART = 231;
  SCREEN_ORIENTATION_LEFT_WRIST = 306;
  SCREEN_ORIENTATION_RIGHT_WRIST = 307;
  SECURE_ADB_CANCEL = 234;
  SECURE_ADB_FINGERPRINT = 235;
  SECURE_ADB_OK = 236;
  SECURE_ADB_ALLOWLIST = 237;
  SECURITY_DEVICE_ADMINISTRATION = 176;
  SECURITY_LOCKSCREEN = 301;
  SECURITY_LOCKSCREEN_NONE = 220;
  SECURITY_LOCKSCREEN_PATTERN = 222;
  SECURITY_LOCKSCREEN_PIN = 225;
  SECURITY_LOCK_SCREEN_NOW = 312;
  SOUND_ACCESSIBILITY_VOLUME = 322;
  SOUND_ALARM_VOLUME = 121;
  SOUND_CALL_VOLUME = 365;
  SOUND_MEDIA_VOLUME = 214;
  SOUND_RING_VOLUME = 233;
  SOUND_WATCH_RINGTONE = 271;
  SYSTEM_ABOUT = 18;
  SYSTEM_DATE_TIME = 169;
  SYSTEM_INPUT_METHODS = 201;
  SYSTEM_SYSTEM_UPDATE = 257;
  VIBRATION_LEVEL = 268;
  VIBRATION_MUTE_WHEN_OFF_BODY = 318;
  VIBRATION_VIBRATE_FOR_CALLS = 267;
  VIBRATION_VIBRATE_FOR_RSB = 389;
  WIFI_ABOUT = 274;
  WIFI_ADD_NETWORK = 275;
  WIFI_AVAILABLE_NETWORKS_GROUP = 131;
  WIFI_CURRENT_NETWORK = 276;
  WIFI_FORGET_NETWORK = 328;
  WIFI_OLD = 278;
  WIFI_OPEN_ON_PHONE = 327;
  WIFI_OPEN_ON_WATCH = 326;
  WIFI_RETRY = 325;
  WIFI_SAVED_NETWORKS = 279;
  WIFI_TOGGLE = 280;
  WIFI_VIEW_IP_ADDRESS = 281;
  WIFI_VIEW_MAC_ADDRESS = 282;
}
